# disney-wait-time-app

./: .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  chromatic.config.json  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yaml  lint.yaml
.storybook/: main.ts  preview.ts
app/collector/: index.py  pyproject.toml  runtest.sh
app/collector/collector/: attraction.py  document.py
app/collector/resources/: tdl_attraction.json  tds_attraction.json
app/collector/tests/: test_index.py  util.py
app/collector_go/: go.mod  go.sum  main.go
app/collector_go/core/: errors.go  facility.go  facility_test.go  operatinghour.go  operatinghour_test.go  shared_test.go  standby.go  standby_test.go
app/collector_go/repository/: table.go  table_test.go
app/collector_go/stubs/: tabe_stubs.go
app/collector_go/tdr/: repository_test.go  repotirosy.go  (+1 more)
doc/: Dev.md
frontend/: .eslintignore  .graphqlconfig.yml  package-lock.json  package.json
frontend/amplify/: team-provider-info.json
frontend/src/: API.ts
src/app/: globals.css  layout.tsx  page.tsx  standby-by-area.stories.tsx  standby-by-area.tsx
src/backend/collector/: attraction.py  index.py  pyproject.toml
src/backend/collector/resources/: tdl_attraction.json
src/components/: navbar.tsx  page-header.tsx
src/lib/: attractions.ts  facility.test.ts  facility.ts  fetcher.mock.ts  fetcher.ts  types.test.ts  types.ts  utils.ts
terraform/live/: terragrunt.hcl
(+75 files in other folders)
