[tool.poetry]
name = "collector"
version = "0.1.0"
description = ""
authors = ["shusann01116 <26602565+shusann01116@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
requests-file = "^1.5.1"
boto3-stubs = { version = "1.27.1", extras = ["essential"] }


[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = { extras = ["aws-sdk"], version = "^2.23.0" }
boto3 = "1.27.1"
black = "^23.7.0"
ruff = "^0.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311']
